--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> [Insert Date]</p>
+  <p><strong>Effective Date:</strong> June 1, 2025</p>
 
-  <p>Your privacy is important to us. This Privacy Policy describes how <strong>[Your App Name]</strong> ("we", "us", or "our") collects, uses, and protects any personal information that you provide when using our application.</p>
+  <p>Your privacy is important to us. This Privacy Policy describes how <strong>Michael Norton's n8n</strong> ("we", "us", or "our") collects, uses, and protects any personal information that you provide when using our application.</p>
 
   <h2>1. Information We Collect</h2>
   <ul>
@@ -61,6 +61,6 @@
 
   <h2>8. Contact Us</h2>
   <p>If you have any questions or concerns about this Privacy Policy, please contact us at:<br>
-  <strong>[Your Contact Email]</strong></p>
+  <strong>mnorton05@gmail.com</strong></p>
 </body>
 </html>
